--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     width: 100%;
     min-height: 100vh;
     font-family: "Cairo", serif;
@@ -19,7 +19,7 @@ body{
     position: relative;
 }
 
-header{
+header {
     padding: 10px;
     background-color: #fff;
     position: fixed;
@@ -30,23 +30,24 @@ header{
     z-index: 99999;
 }
 
-header .title{
+header .title {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
-header .title{
+header .title {
     text-decoration: none;
     color: #000;
 }
 
-header .title img{
+header .title img {
     width: 50px;
-    border-radius: 0.3rem;;
+    border-radius: 0.3rem;
+    ;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -54,20 +55,20 @@ header .title img{
     margin: 0 auto;
 }
 
-header .nav{
+header .nav {
     list-style: none;
     display: flex;
     align-items: center;
     gap: 1.5rem;
 }
 
-header .nav a{
+header .nav a {
     text-decoration: none;
     position: relative;
     color: #0070ff;
 }
 
-header .nav a::after{
+header .nav a::after {
     content: '';
     position: absolute;
     bottom: -3px;
@@ -80,16 +81,16 @@ header .nav a::after{
     transition: 0.3s;
 }
 
-header .nav a:hover::after{
+header .nav a:hover::after {
     width: 70%;
     opacity: 1;
 }
 
-main{
+main {
     padding-top: 5rem;
 }
 
-main .banner{
+main .banner {
     width: 100%;
     height: 30vh;
     background-image: url(./imgs/banner.png);
@@ -102,7 +103,7 @@ main .banner{
     justify-content: center;
 }
 
-main .banner::after{
+main .banner::after {
     content: '';
     width: 100%;
     height: 100%;
@@ -112,23 +113,23 @@ main .banner::after{
     top: 0;
 }
 
-main .banner .title{
+main .banner .title {
     position: relative;
     z-index: 9;
     color: #fff;
     font-size: 2.1rem;
 }
 
-section{
+section {
     padding: 100px 0;
     border-bottom: 5px solid #fff;
 }
 
-section .container{
+section .container {
     gap: 1rem;
 }
 
-section .text h1{
+section .text h1 {
     font-size: 2rem;
     color: #0093ff;
     position: relative;
@@ -136,7 +137,7 @@ section .text h1{
     margin: 0 auto;
 }
 
-section .text h1::after{
+section .text h1::after {
     content: '';
     position: absolute;
     left: 50%;
@@ -147,21 +148,21 @@ section .text h1::after{
     height: 2px;
 }
 
-section img{
+section img {
     max-width: 550px;
     border-radius: 0.5rem;
     border: 5px solid #fff;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-section p{
+section p {
     max-width: 800px;
     margin: 30px 0;
     line-height: 2;
     font-size: 1.1rem;
 }
 
-section .btn{
+section .btn {
     background-color: #0093ff;
     color: #fff;
     text-decoration: none;
@@ -170,11 +171,11 @@ section .btn{
     transition: 0.3s;
 }
 
-section .btn:hover{
+section .btn:hover {
     background-color: #007ad3;
 }
 
-.about_main{
+.about_main {
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -185,50 +186,50 @@ section .btn:hover{
     width: 100%;
 }
 
-.personal .text{
+.personal .text {
     width: 50%;
 }
 
-.personal .text h1{
+.personal .text h1 {
     margin-bottom: 20px;
 }
 
-.personal .text p{
+.personal .text p {
     font-size: 1.1rem;
-    width: 700px;
+    max-width: 700px;
     margin-bottom: 30px;
 }
 
-.personal .text h1 span{
+.personal .text h1 span {
     color: #0070ff;
 }
 
-.personal .text ul{
+.personal .text ul {
     margin-top: 10px;
 }
 
-.personal .text ul li{
+.personal .text ul li {
     margin: 20px 0;
 }
 
-.personal .text ul li::marker{
+.personal .text ul li::marker {
     color: #0070ff;
 }
 
-.personal .wrapper_img{
+.personal .wrapper_img {
     width: 450px;
     border-radius: 1rem;
     border: 5px solid #fff;
 }
 
-.personal .certificates{
+.personal .certificates {
     display: flex;
     align-items: center;
     gap: 2rem;
     margin: 30px 0;
 }
 
-.personal .certificates img{
+.personal .certificates img {
     width: 200px;
     border: 5px solid #fff;
     border-radius: 1rem;
@@ -236,11 +237,11 @@ section .btn:hover{
     cursor: pointer;
 }
 
-.personal .certificates img:hover{
+.personal .certificates img:hover {
     transform: scale(1.1);
 }
 
-.img_model{
+.img_model {
     position: fixed;
     top: 0;
     left: 0;
@@ -256,16 +257,16 @@ section .btn:hover{
     transition: 0.3s;
 }
 
-.img_model.active{
+.img_model.active {
     opacity: 1;
     visibility: visible;
 }
 
-.img_model img{
+.img_model img {
     width: 800px;
 }
 
-.img_model #close{
+.img_model #close {
     position: absolute;
     bottom: 50px;
     background-color: #fff;
@@ -279,11 +280,104 @@ section .btn:hover{
     transition: 0.3s;
 }
 
-.img_model #close:hover{
+.img_model #close:hover {
     background-color: #dbdbdb;
 }
 
-footer{
+footer {
     background-color: #fff;
     padding: 15px 0;
+}
+
+.mobile_menu {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 300px;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    transform: translateX(50vw);
+    visibility: hidden;
+    transition: 0.3s;
+}
+
+.mobile_menu.active {
+    transform: translateX(0);
+    visibility: visible;
+}
+
+#burger_menu {
+    display: none;
+}
+
+@media (max-width: 1270px) {
+    .desk_nav {
+        display: none !important;
+    }
+
+    .mobile_menu {
+        display: block !important;
+    }
+
+    .mobile_menu .title {
+        justify-content: center;
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid gray;
+    }
+
+    .mobile_menu .nav {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+
+    #burger_menu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+}
+
+@media (max-width: 990px) {
+    .container:not(header .container) {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .container p,
+    main .banner .title{
+        text-align: center;
+    }
+
+    section img {
+        max-width: 350px;
+    }
+
+    .title h1,
+    .title h4 {
+        font-size: 0.8rem !important;
+    }
+}
+
+@media (max-width: 1250px){
+    .about_main .personal .container{
+        flex-direction: column-reverse;
+        margin-top: 10px;
+    }
+
+    .personal .text{
+        width: 100%;
+    }
+
+    .personal .certificates{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .personal .wrapper_img{
+        width: 350px;
+    }
 }
