--- a/style.css
+++ b/style.css
@@ -368,6 +368,12 @@ footer {
     .img_model img{
         width: 350px;
     }
+
+    section .btn{
+        display: block;
+        width: fit-content;
+        margin: 0 auto;
+    }
 }
 
 @media (max-width: 1250px) {
