--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ header .title img {
     justify-content: center;
 }
 
+header .container{
+    width: 95%;
+    padding-right: 20px;
+}
+
 .container {
     display: flex;
     align-items: center;
@@ -83,6 +88,14 @@ header .nav a {
     text-decoration: none;
     position: relative;
     color: #0070ff;
+    font-size: 0.9rem;
+    border-radius: 0.4rem;
+}
+
+header .nav a.active{
+    background-color: #2f8bff;
+    color: #fff;
+    padding: 2px 10px;
 }
 
 header .nav a::after {
@@ -98,7 +111,7 @@ header .nav a::after {
     transition: 0.3s;
 }
 
-header .nav a:hover::after {
+header .nav a:not(.active):hover::after {
     width: 70%;
     opacity: 1;
 }
