--- a/style.css
+++ b/style.css
@@ -126,8 +126,8 @@ main {
 
 main .banner {
     width: 100%;
-    height: 30vh;
-    background-image: url(./imgs/banner.png);
+    height: 40vh;
+    background-image: url(./imgs/banner.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
