--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     width: 100%;
     height: 100vh;
     position: fixed;
-    left: 0;
+    right: 0;
     top: 0;
     background-color: #f7f7f7;
     z-index: 99999999;
@@ -50,7 +50,7 @@ header {
     background-color: #fff;
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     z-index: 99999;
