--- a/style.css
+++ b/style.css
@@ -586,7 +586,8 @@ section li p{
         width: 100%;
     }
 
-    section img {
+    section img,
+    section video{
         width: unset;
         max-width: 350px !important;
     }
